src/apps/Altinn.AccessManagement/manifests/deploy/base/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-management
  labels:
    app.kubernetes.io/name: access-management
    app.kubernetes.io/part-of: access-management
spec:
  selector:
    app.kubernetes.io/name: access-management
    app.kubernetes.io/part-of: access-management
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
