src/apps/Altinn.AccessManagement/manifests/deploy/base/04-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: access-management
  labels:
    app.kubernetes.io/name: access-management
    app.kubernetes.io/part-of: access-management
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: l5d-dst-override
                value: access-management.product-access-management.svc.cluster.local:80
      backendRefs:
        - name: access-management
          port: 80
